@@ -97,9 +97,8 @@ public:
 protected:
 friend class unit_animation;
 	int starting_frame_time_;
-        // backward compatibility for teleport anims
         void remove_frames_until(int starting_time);
-        void remove_frames_after(int ending_time);
+        void set_end_time(int ending_time);
 
 private:
 	struct frame
